--- a/src/styles.css
+++ b/src/styles.css
@@ -69,6 +69,7 @@ input[type='checkbox']:checked + svg {
 .scrollbar-y::-webkit-scrollbar-track,
 .scrollbar-x::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: #f5f5f5;
 }
 .scrollbar::-webkit-scrollbar,
@@ -144,13 +145,29 @@ td {
     left: 95%;
 }
 
+/* dropdown */
 .ngx-dropdown-container .ngx-dropdown-button {
     @apply overflow-hidden !important;
 }
+
 /* load scenario card */
 nwn-scenario-load-card .load-scenario-card {
     @apply bg-white;
 }
 .active nwn-scenario-load-card .load-scenario-card {
     @apply bg-marsgray-100;
+}
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0) !important;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0) !important;
+    background-color: transparent !important;
+}
+::-webkit-scrollbar {
+    width: 5px;
+    background-color: transparent !important;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #a5a5a5 !important;
+    border: 2px solid #a5a5a5 !important;
+    border-radius: 5px !important;
 }
